[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 200.0
margin_top = 40.0
margin_right = 824.0
margin_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Chrono Crabs"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="."]
margin_left = 400.0
margin_top = 160.0
margin_right = 624.0
margin_bottom = 310.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Address_Label" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Address"

[node name="Address" type="LineEdit" parent="Panel"]
margin_left = 10.0
margin_top = 30.0
margin_right = 210.0
margin_bottom = 54.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "127.0.0.1"

[node name="Host_Button" type="Button" parent="Panel"]
margin_left = 10.0
margin_top = 60.0
margin_right = 90.0
margin_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Host"

[node name="Join_Button" type="Button" parent="Panel"]
margin_left = 130.0
margin_top = 60.0
margin_right = 210.0
margin_bottom = 80.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Join"

[node name="Status_OK" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 1, 0, 1 )

[node name="Status_Fail" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0, 0, 1 )

[node name="Status_1_Player" type="Button" parent="Panel"]
visible = false
margin_left = 10.0
margin_top = 120.0
margin_right = 210.0
margin_bottom = 140.0
text = "Play Now!"
[connection signal="pressed" from="Panel/Host_Button" to="." method="_on_Host_Button_pressed"]
[connection signal="pressed" from="Panel/Join_Button" to="." method="_on_Join_Button_pressed"]
[connection signal="pressed" from="Panel/Status_1_Player" to="." method="_on_Status_1_Player_pressed"]
